make my profile prettier

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+
+    <div id="sidebar">
+      ...
+    </div>
+    <div id="page-content">
+      ...
+    </div>
     <div id="container">
       <div class="card text-center">
         <img src="public/profile.jpg" alt="Profile Pic" width=120 height=120 id="img-circle">
