make my profile prettier

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <body>
 
     <div id="sidebar">
-      ...
+      <a href="#summary">Info</a>
+      <a href="#favorite-movies">Movies</a>
+      <a href="#help">Info</a>
     </div>
     <div id="page-content">
-      ...
+      <div id="summary">your summary</div>
+      <div id="favorite-movies">your favorite movies</div>
+      <div id="help">some help section</div>
     </div>
     <div id="container">
       <div class="card text-center">
