enhanced my profile with a fixed sidebar

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
   <body>
 
     <div id="sidebar">
-      <a href="#summary">Info</a>
-      <a href="#favorite-movies">Movies</a>
-      <a href="#help">Info</a>
+      <ul>
+        <li><a href="#summary">Info</a></li>
+        <li><a href="#favorite-movies">Movies</a></li>
+        <li><a href="#help">Info</a></li>
+      </ul>
     </div>
-    <div id="page-content">
-      <div id="summary">your summary</div>
-      <div id="favorite-movies">your favorite movies</div>
-      <div id="help">some help section</div>
-    </div>
+
     <div id="container">
+      <div id="summary">your summary</div>
       <div class="card text-center">
         <img src="public/profile.jpg" alt="Profile Pic" width=120 height=120 id="img-circle">
         <h1>진용</h1>
@@ -35,7 +34,7 @@
           <li><a href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter-square"> </i> Twitter</a></li>
         </ul>
       </div>
-
+      <div id="favorite-movies">your favorite movies</div>
       <div class="card text-center">
         <h2>My Favorite Movies</h2>
         <table>
@@ -71,7 +70,7 @@
           </tbody>
         </table>
       </div>
-
+      <div id="help">some help section</div>
       <div class="card text-center">
         <h2>About this page</h2>
         <p>This page has been coded during the <a href="https://www.lewagon.com/berlin">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.</p>
