make my profile prettier

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     </div>
 
     <div id="container">
-      <div id="summary">your summary</div>
-      <div class="card text-center">
-        <img src="public/profile.jpg" alt="Profile Pic" width=120 height=120 id="img-circle">
-        <h1>진용</h1>
-        <h2>full-time potato @earth</h2>
-        <p>完全に暇つぶしで人生謳歌中。現在世界でニート中。いまはベルリンでLe Wagonなう。次はどこでニートしようかな。言語学びにアラブ圏にでも行こうかな。それとも上座部仏教の僧やるためにタイにでも行こうかな。</p>
-        <a href="https://www.lewagon.com/" class="btn-red">See for yourself</a>
+      <div id="summary">
+        <div class="card text-center">
+          <img src="public/profile.jpg" alt="Profile Pic" width=120 height=120 id="img-circle">
+          <h1>진용</h1>
+          <h2>full-time potato @earth</h2>
+          <p>完全に暇つぶしで人生謳歌中。現在世界でニート中。いまはベルリンでLe Wagonなう。次はどこでニートしようかな。言語学びにアラブ圏にでも行こうかな。それとも上座部仏教の僧やるためにタイにでも行こうかな。</p>
+          <a href="https://www.lewagon.com/" class="btn-red">See for yourself</a>
+        </div>
       </div>
 
       <div class="card text-center">
@@ -34,51 +35,55 @@
           <li><a href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter-square"> </i> Twitter</a></li>
         </ul>
       </div>
-      <div id="favorite-movies">your favorite movies</div>
-      <div class="card text-center">
-        <h2>My Favorite Movies</h2>
-        <table>
-        <tbody>
-            <tr>
-              <td><a href="https://www.youtube.com/watch?v=HcqozQhr1Gk" class="square-image" target="_blank">
-                <img src="public/the_wave.jpg" width=200 height=300></a>
-              </td>
-                <td><h3>The Wave</h3>
-                  <p>Die Welle (The Wave) is a 2008 German sociopolitical thriller film directed by Dennis Gansel and starring Jürgen Vogel, Frederick Lau, Jennifer Ulrich and Max Riemelt in the leads. It is based on Ron Jones' social experiment The Third Wave and Todd Strasser's novel, The Wave. The film was produced by Christian Becker for Rat Pack Filmproduktion. It was successful in German cinemas, and after ten weeks, 2.3 million people had watched it.</p>
-                </td>
-            </tr>
-            <tr>
-              <td><a href="https://www.youtube.com/watch?v=pyWuHv2-Abk" class="square-image" target="_blank"><img src="public/train_to_busan.jpg" width=200 height=300></a>
-              </td>
-              <td>
-                <h3>Train <i class="fas fa-subway"></i> to Busan</h3>
-                <p>Train to Busan (Hangul: 부산행; RR: Busanhaeng) is a 2016 South Korean zombie apocalypse action thriller film directed by Yeon Sang-ho and starring Gong Yoo, Jung Yu-mi, and Ma Dong-seok.The film takes place on a train to Busan, as a zombie apocalypse suddenly breaks out in the country and compromises the safety of the passengers.
 
-                The film premiered in the Midnight Screenings section of the 2016 Cannes Film Festival on 13 May. On 7 August, the film set a record as the first Korean film of 2016 to break the audience record of over 10 million theatergoers. The film serves as a reunion for Gong Yoo and Jung Yu-mi, who both starred in the 2011 film The Crucible.
-
-</p>
-              </td>
-            </tr>
+      <div id="favorite-movies">
+        <div class="card text-center">
+          <h2>My Favorite Movies</h2>
+          <table>
+          <tbody>
               <tr>
-                <td><a href="https://www.youtube.com/watch?v=I5cGRrQxzZA" class="square-image" target="_blank"><img src="public/no_game_no_life.jpg" width=200 height=300></a>
+                <td><a href="https://www.youtube.com/watch?v=HcqozQhr1Gk" class="square-image" target="_blank">
+                  <img src="public/the_wave.jpg" width=200 height=300></a>
+                </td>
+                  <td><h3>The Wave</h3>
+                    <p>Die Welle (The Wave) is a 2008 German sociopolitical thriller film directed by Dennis Gansel and starring Jürgen Vogel, Frederick Lau, Jennifer Ulrich and Max Riemelt in the leads. It is based on Ron Jones' social experiment The Third Wave and Todd Strasser's novel, The Wave. The film was produced by Christian Becker for Rat Pack Filmproduktion. It was successful in German cinemas, and after ten weeks, 2.3 million people had watched it.</p>
+                  </td>
+              </tr>
+              <tr>
+                <td><a href="https://www.youtube.com/watch?v=pyWuHv2-Abk" class="square-image" target="_blank"><img src="public/train_to_busan.jpg" width=200 height=300></a>
                 </td>
                 <td>
-                  <h3>No Game No Life Zero</h3>
-                  <p>No Game, No Life Zero (Japanese: ノーゲーム・ノーライフ ゼロ Hepburn: Nōgēmu Nōraifu Zero) is a Japanese anime film based on the light novel series No Game No Life by Yuu Kamiya. The film was directed by Atsuko Ishizuka at studio Madhouse. It premiered in Japan on July 15, 2017. The film has been licensed by Sentai Filmworks in the United States, Madman Entertainment in Australia and New Zealand, and by MVM in the United Kingdom.</p>
+                  <h3>Train <i class="fas fa-subway"></i> to Busan</h3>
+                  <p>Train to Busan (Hangul: 부산행; RR: Busanhaeng) is a 2016 South Korean zombie apocalypse action thriller film directed by Yeon Sang-ho and starring Gong Yoo, Jung Yu-mi, and Ma Dong-seok.The film takes place on a train to Busan, as a zombie apocalypse suddenly breaks out in the country and compromises the safety of the passengers.
+
+                  The film premiered in the Midnight Screenings section of the 2016 Cannes Film Festival on 13 May. On 7 August, the film set a record as the first Korean film of 2016 to break the audience record of over 10 million theatergoers. The film serves as a reunion for Gong Yoo and Jung Yu-mi, who both starred in the 2011 film The Crucible.
+
+  </p>
                 </td>
               </tr>
-          </tbody>
-        </table>
+                <tr>
+                  <td><a href="https://www.youtube.com/watch?v=I5cGRrQxzZA" class="square-image" target="_blank"><img src="public/no_game_no_life.jpg" width=200 height=300></a>
+                  </td>
+                  <td>
+                    <h3>No Game No Life Zero</h3>
+                    <p>No Game, No Life Zero (Japanese: ノーゲーム・ノーライフ ゼロ Hepburn: Nōgēmu Nōraifu Zero) is a Japanese anime film based on the light novel series No Game No Life by Yuu Kamiya. The film was directed by Atsuko Ishizuka at studio Madhouse. It premiered in Japan on July 15, 2017. The film has been licensed by Sentai Filmworks in the United States, Madman Entertainment in Australia and New Zealand, and by MVM in the United Kingdom.</p>
+                  </td>
+                </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-      <div id="help">some help section</div>
-      <div class="card text-center">
-        <h2>About this page</h2>
-        <p>This page has been coded during the <a href="https://www.lewagon.com/berlin">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.</p>
-        <ul class="action list-inline">
-          <li><a href="index.html"><i class="fas fa-share"></i></a></li>
-          <li><a href="index.html"><i class="fas fa-heart"></i></a></li>
-          <li><a href="index.html"><i class="fas fa-star"></i></a></li>
-        </ul>
+
+      <div id="help">
+        <div class="card text-center">
+          <h2>About this page</h2>
+          <p>This page has been coded during the <a href="https://www.lewagon.com/berlin">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.</p>
+          <ul class="action list-inline">
+            <li><a href="index.html"><i class="fas fa-share"></i></a></li>
+            <li><a href="index.html"><i class="fas fa-heart"></i></a></li>
+            <li><a href="index.html"><i class="fas fa-star"></i></a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
