make my profile prettier

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="sidebar">
       <ul>
-        <li><a href="#summary">Info</a></li>
+        <li><a href="#summary">Introduction</a></li>
         <li><a href="#favorite-movies">Movies</a></li>
         <li><a href="#help">Info</a></li>
       </ul>
