make my profile prettier

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1>진용</h1>
           <h2>full-time potato @earth</h2>
           <p>完全に暇つぶしで人生謳歌中。現在世界でニート中。いまはベルリンでLe Wagonなう。次はどこでニートしようかな。言語学びにアラブ圏にでも行こうかな。それとも上座部仏教の僧やるためにタイにでも行こうかな。</p>
-          <a href="https://www.lewagon.com/" class="btn-red">See for yourself</a>
+          <a href="https://www.lewagon.com/" class="btn-gray">See for yourself</a>
         </div>
       </div>
 
