make my profile prettier

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <ul class="list-inline" id="social">
           <li><a href="https://www.linkedin.com/in/jinyong-kim-bb252762/" target="_blank"><i class="fab fa-linkedin"> </i> Linkedin</a></li>
           <li><a href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter-square"> </i> Twitter</a></li>
+          <li><a href="https://github.com/jenok" target="_blank"><i class="fab fa-github-square"></i> Github</a></li>
         </ul>
       </div>
 
