make my profile prettier

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <img src="public/profile.jpg" alt="Profile Pic" width=120 height=120 id="img-circle">
           <h1>진용</h1>
           <h2>full-time potato @earth</h2>
-          <p>完全に暇つぶしで人生謳歌中。現在世界でニート中。いまはベルリンでLe Wagonなう。次はどこでニートしようかな。言語学びにアラブ圏にでも行こうかな。それとも上座部仏教の僧やるためにタイにでも行こうかな。</p>
-          <a href="https://www.lewagon.com/" class="btn-gray">See for yourself</a>
+          <p>An investor. I got too many stresses from markets, so currently I'm just doing nothing but learning coding!</p>
+          <a href="https://www.amazon.com/Zurich-Axioms-reward-generations-bankers/dp/1897597495" class="btn-gray">Learn basics</a>
         </div>
       </div>
 
