make my profile prettier

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="summary">
         <div class="card text-center">
           <img src="public/profile.jpg" alt="Profile Pic" width=120 height=120 id="img-circle">
-          <h1>진용</h1>
+          <h1>Jinyong</h1>
           <h2>full-time potato @earth</h2>
           <p>An investor. I got too many stresses from markets, so currently I'm just doing nothing but learning coding!</p>
           <a href="https://www.amazon.com/Zurich-Axioms-reward-generations-bankers/dp/1897597495" class="btn-gray">Learn basics</a>
