--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <div id="sidebar">
       <ul>
-        <li><a href="#summary">Introduction</a></li>
-        <li><a href="#favorite-movies">Movies</a></li>
-        <li><a href="#help">Info</a></li>
+        <li><a href="#summary"><i class="fas fa-male"></i></a></li>
+        <li><a href="#favorite-movies"><i class="fas fa-video"></i></a></li>
+        <li><a href="#help"><i class="fas fa-info"></i></a></li>
       </ul>
     </div>
 
