--- a/index.html
+++ b/index.html
@@ -88,23 +88,12 @@
         </div>
       </div>
 
-<!--         <form class="form-inline">
-          <div class="form-group">
-            <label for="inputPassword6">Password</label>
-            <input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
-            <small id="passwordHelpInline" class="text-muted">
-              Must be 8-20 characters long.
-            </small>
-          </div>
-        </form> -->
 
+      <div class="card text-center">
         <form>
           <input type="search">
         </form>
-
+      </div>
     </div>
-<!--     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
   </body>
 </html>
