make my profile prettier

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 
 
       <div class="card text-center">
+        <h2>Form Test</h2>
+        <p>This is just a test</p>
         <form>
           <input type="search">
         </form>
