make my profile prettier

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         <h2>Form Test</h2>
         <p>This is just a test</p>
         <form>
-          <input type="search">
+          <input type="search" name="serach">
+          <button type="submit">Send your message</button>
         </form>
       </div>
     </div>
