make my profile prettier

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
 
       <div class="card text-center">
-        <h2>Form Test</h2>
-        <p>This is just a test</p>
+        <h2>Nothing will happen on this form</h2>
+        <p>Just check out url bar. You can see ?serach='what you type'</p>
         <form>
           <input type="search" name="serach">
           <button type="submit">Send your message</button>
