make my profile prettier

--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
 
 
       <div class="card text-center">
-        <h2>Nothing will happen on this form</h2>
-        <p>Just check out url bar. You can see ?serach='what you type'</p>
+        <h2>You can meet me on Skype</h2>
+        <p>Just tell me which date is good for you!</p>
         <form>
-          <input type="search" name="serach">
-          <button type="submit">Send your message</button>
+            Select a time:
+          <input type="date" name="bday">
+          <button type="submit">Send!</button>
         </form>
       </div>
     </div>
